Reorganize some templates

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -322,6 +322,7 @@ Resources:
         - { Key: prx:dev:application, Value: Common }
       TemplateURL: !Sub ${Constants.TemplateUrlBase}/stacks/shared-alb.yml
       TimeoutInMinutes: 40
+
   SharedEcsClusterStack:
     Type: AWS::CloudFormation::Stack
     Properties:
@@ -339,7 +340,7 @@ Resources:
         - { Key: prx:cloudformation:root-stack-id, Value: !GetAtt Constants.RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
-      TemplateURL: !Sub ${Constants.TemplateUrlBase}/stacks/shared-ecs-cluster.yml
+      TemplateURL: !Sub ${Constants.TemplateUrlBase}/stacks/shared-ecs/ecs-cluster.yml
       TimeoutInMinutes: 20
   SharedEcsAsgSecurityGroupStack:
     Type: AWS::CloudFormation::Stack
@@ -360,7 +361,7 @@ Resources:
         - { Key: prx:cloudformation:root-stack-id, Value: !GetAtt Constants.RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
-      TemplateURL: !Sub ${Constants.TemplateUrlBase}/stacks/shared-ecs-asg-sg.yml
+      TemplateURL: !Sub ${Constants.TemplateUrlBase}/stacks/shared-ecs/asg-sg.yml
       TimeoutInMinutes: 20
   SharedEcsAsgStack:
     Type: AWS::CloudFormation::Stack
@@ -399,7 +400,7 @@ Resources:
         - { Key: prx:cloudformation:root-stack-id, Value: !GetAtt Constants.RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
-      TemplateURL: !Sub ${Constants.TemplateUrlBase}/stacks/shared-ecs-asg.yml
+      TemplateURL: !Sub ${Constants.TemplateUrlBase}/stacks/shared-ecs/asg.yml
       TimeoutInMinutes: 1440
 
   SharedResourceShareStack:
@@ -473,7 +474,7 @@ Resources:
         - { Key: prx:cloudformation:root-stack-id, Value: !GetAtt Constants.RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
-      TemplateURL: !Sub ${Constants.TemplateUrlBase}/stacks/shared-redis-sg.yml
+      TemplateURL: !Sub ${Constants.TemplateUrlBase}/stacks/shared-redis/security-groups.yml
       TimeoutInMinutes: 20
   SharedRedisStack:
     Type: AWS::CloudFormation::Stack
@@ -498,7 +499,7 @@ Resources:
         - { Key: prx:cloudformation:root-stack-id, Value: !GetAtt Constants.RootStackId }
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
-      TemplateURL: !Sub ${Constants.TemplateUrlBase}/stacks/shared-redis.yml
+      TemplateURL: !Sub ${Constants.TemplateUrlBase}/stacks/shared-redis/cluster.yml
       TimeoutInMinutes: 60
 
   SharedAnnounceStack:
