--- a/stacks/shared-ecs/asg.yml
+++ b/stacks/shared-ecs/asg.yml
@@ -1,4 +1,4 @@
-# stacks/shared-ecs-asg.yml
+# stacks/shared-ecs/asg.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Transform: AWS::Serverless-2016-10-31
 
