--- a/stacks/shared-redis/security-groups.yml
+++ b/stacks/shared-redis/security-groups.yml
@@ -1,4 +1,4 @@
-# stacks/shared-redis-sg.yml
+# stacks/shared-redis/security-groups.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Transform: AWS::Serverless-2016-10-31
 
