Just hardcode AMI for now

--- a/stacks/jump-server.yml
+++ b/stacks/jump-server.yml
@@ -8,7 +8,7 @@ Description: >-
 Parameters:
   kImageId:
     Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
-    Default: /aws/service/ecs/optimized-ami/amazon-linux-2/amzn2-ami-ecs-hvm-2.0.20211209-x86_64-ebs/image_id
+    Default: ami-0789681fae8b18e56
   ########
   AuthorizedKeys: { Type: CommaDelimitedList }
   EnvironmentType: { Type: String }
