--- a/stacks/jump-server.yml
+++ b/stacks/jump-server.yml
@@ -110,14 +110,12 @@ Resources:
       KeyName: !Ref KeyPairName
       Monitoring: false
       NetworkInterfaces:
-        - AssociatePublicIpAddress: true
-          DeleteOnTermination: true
+        - DeleteOnTermination: true
           DeviceIndex: 0
           GroupSet:
             - !Ref SharedMysqlClientSecurityGroupId
             - !Ref SharedPostgresqlClientSecurityGroupId
             - !Ref SharedRedisClientSecurityGroupId
-          Ipv6AddressCount: 1
           SubnetId: !Ref VpcPublicSubnet1Id
       Tags:
         - { Key: Name, Value: !Sub "${RootStackName}_jump_server" }
@@ -155,3 +153,21 @@ Resources:
             # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/cfn-init.html
             # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-init.html
             /opt/aws/bin/cfn-init -v --region ${AWS::Region} --stack ${AWS::StackName} --resource JumpServer
+  ElasticIP:
+    Type: AWS::EC2::EIP
+    Properties:
+      Domain: vpc
+      InstanceId: !Ref JumpServer
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Common }
+
+Outputs:
+  ElasticIP:
+    Description: The Elastic IP address of the jump server
+    Value: !Ref ElasticIP
