Actually add security group

--- a/stacks/jump-server.yml
+++ b/stacks/jump-server.yml
@@ -134,6 +134,7 @@ Resources:
         - DeleteOnTermination: true
           DeviceIndex: 0
           GroupSet:
+            - !GetAtt SecurityGroup.GroupId
             - !Ref SharedMysqlClientSecurityGroupId
             - !Ref SharedPostgresqlClientSecurityGroupId
             - !Ref SharedRedisClientSecurityGroupId
