Turn off old subnets

--- a/stacks/vpc.yml
+++ b/stacks/vpc.yml
@@ -235,85 +235,85 @@ Resources:
   #     VpcEndpointType: Interface
   #     VpcId: !Ref VPC
 
-  # Public subnets
-  Subnet1:
-    Type: AWS::EC2::Subnet
-    DependsOn: IPv6VCPCidrBlock
-    UpdateReplacePolicy: Retain
-    DeletionPolicy: Retain
-    Properties:
-      VpcId: !Ref VPC
-      AvailabilityZone: !Join ["", [!Ref "AWS::Region", a]]
-      CidrBlock: 10.0.1.0/24
-      Ipv6CidrBlock: !Select [0, !Cidr [!Select [0, !GetAtt VPC.Ipv6CidrBlocks], 3, 64]] # 64 CIDR bits = (128 - 64) = /64 mask
-      Tags:
-        - Key: Project
-          Value: platform.prx.org
-        - Key: Environment
-          Value: !Ref EnvironmentType
-        - Key: Name
-          Value: !Sub Platform-${EnvironmentType}-1
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
-  Subnet2:
-    Type: AWS::EC2::Subnet
-    DependsOn: IPv6VCPCidrBlock
-    UpdateReplacePolicy: Retain
-    DeletionPolicy: Retain
-    Properties:
-      VpcId: !Ref VPC
-      AvailabilityZone: !If [IsUsEast1, us-east-1c, !Join ["", [!Ref "AWS::Region", b]]]
-      CidrBlock: 10.0.2.0/24
-      Ipv6CidrBlock: !Select [1, !Cidr [!Select [0, !GetAtt VPC.Ipv6CidrBlocks], 3, 64]] # 64 CIDR bits = (128 - 64) = /64 mask
-      Tags:
-        - Key: Project
-          Value: platform.prx.org
-        - Key: Environment
-          Value: !Ref EnvironmentType
-        - Key: Name
-          Value: !Sub Platform-${EnvironmentType}-2
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
-  Subnet3:
-    Type: AWS::EC2::Subnet
-    DependsOn: IPv6VCPCidrBlock
-    UpdateReplacePolicy: Retain
-    DeletionPolicy: Retain
-    Properties:
-      VpcId: !Ref VPC
-      AvailabilityZone: !If [IsUsEast1, us-east-1d, !Join ["", [!Ref "AWS::Region", c]]]
-      CidrBlock: 10.0.3.0/24
-      Ipv6CidrBlock: !Select [2, !Cidr [!Select [0, !GetAtt VPC.Ipv6CidrBlocks], 3, 64]] # 64 CIDR bits = (128 - 64) = /64 mask
-      Tags:
-        - Key: Project
-          Value: platform.prx.org
-        - Key: Environment
-          Value: !Ref EnvironmentType
-        - Key: Name
-          Value: !Sub Platform-${EnvironmentType}-3
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
-  Subnet1RouteTableAssociation:
-    Type: AWS::EC2::SubnetRouteTableAssociation
-    Properties:
-      SubnetId: !Ref Subnet1
-      RouteTableId: !Ref RouteTable
-  Subnet2RouteTableAssociation:
-    Type: AWS::EC2::SubnetRouteTableAssociation
-    Properties:
-      SubnetId: !Ref Subnet2
-      RouteTableId: !Ref RouteTable
-  Subnet3RouteTableAssociation:
-    Type: AWS::EC2::SubnetRouteTableAssociation
-    Properties:
-      SubnetId: !Ref Subnet3
-      RouteTableId: !Ref RouteTable
+  # # Public subnets
+  # Subnet1:
+  #   Type: AWS::EC2::Subnet
+  #   DependsOn: IPv6VCPCidrBlock
+  #   UpdateReplacePolicy: Retain
+  #   DeletionPolicy: Retain
+  #   Properties:
+  #     VpcId: !Ref VPC
+  #     AvailabilityZone: !Join ["", [!Ref "AWS::Region", a]]
+  #     CidrBlock: 10.0.1.0/24
+  #     Ipv6CidrBlock: !Select [0, !Cidr [!Select [0, !GetAtt VPC.Ipv6CidrBlocks], 3, 64]] # 64 CIDR bits = (128 - 64) = /64 mask
+  #     Tags:
+  #       - Key: Project
+  #         Value: platform.prx.org
+  #       - Key: Environment
+  #         Value: !Ref EnvironmentType
+  #       - Key: Name
+  #         Value: !Sub Platform-${EnvironmentType}-1
+  #       - Key: prx:cloudformation:stack-name
+  #         Value: !Ref AWS::StackName
+  #       - Key: prx:cloudformation:stack-id
+  #         Value: !Ref AWS::StackId
+  # Subnet2:
+  #   Type: AWS::EC2::Subnet
+  #   DependsOn: IPv6VCPCidrBlock
+  #   UpdateReplacePolicy: Retain
+  #   DeletionPolicy: Retain
+  #   Properties:
+  #     VpcId: !Ref VPC
+  #     AvailabilityZone: !If [IsUsEast1, us-east-1c, !Join ["", [!Ref "AWS::Region", b]]]
+  #     CidrBlock: 10.0.2.0/24
+  #     Ipv6CidrBlock: !Select [1, !Cidr [!Select [0, !GetAtt VPC.Ipv6CidrBlocks], 3, 64]] # 64 CIDR bits = (128 - 64) = /64 mask
+  #     Tags:
+  #       - Key: Project
+  #         Value: platform.prx.org
+  #       - Key: Environment
+  #         Value: !Ref EnvironmentType
+  #       - Key: Name
+  #         Value: !Sub Platform-${EnvironmentType}-2
+  #       - Key: prx:cloudformation:stack-name
+  #         Value: !Ref AWS::StackName
+  #       - Key: prx:cloudformation:stack-id
+  #         Value: !Ref AWS::StackId
+  # Subnet3:
+  #   Type: AWS::EC2::Subnet
+  #   DependsOn: IPv6VCPCidrBlock
+  #   UpdateReplacePolicy: Retain
+  #   DeletionPolicy: Retain
+  #   Properties:
+  #     VpcId: !Ref VPC
+  #     AvailabilityZone: !If [IsUsEast1, us-east-1d, !Join ["", [!Ref "AWS::Region", c]]]
+  #     CidrBlock: 10.0.3.0/24
+  #     Ipv6CidrBlock: !Select [2, !Cidr [!Select [0, !GetAtt VPC.Ipv6CidrBlocks], 3, 64]] # 64 CIDR bits = (128 - 64) = /64 mask
+  #     Tags:
+  #       - Key: Project
+  #         Value: platform.prx.org
+  #       - Key: Environment
+  #         Value: !Ref EnvironmentType
+  #       - Key: Name
+  #         Value: !Sub Platform-${EnvironmentType}-3
+  #       - Key: prx:cloudformation:stack-name
+  #         Value: !Ref AWS::StackName
+  #       - Key: prx:cloudformation:stack-id
+  #         Value: !Ref AWS::StackId
+  # Subnet1RouteTableAssociation:
+  #   Type: AWS::EC2::SubnetRouteTableAssociation
+  #   Properties:
+  #     SubnetId: !Ref Subnet1
+  #     RouteTableId: !Ref RouteTable
+  # Subnet2RouteTableAssociation:
+  #   Type: AWS::EC2::SubnetRouteTableAssociation
+  #   Properties:
+  #     SubnetId: !Ref Subnet2
+  #     RouteTableId: !Ref RouteTable
+  # Subnet3RouteTableAssociation:
+  #   Type: AWS::EC2::SubnetRouteTableAssociation
+  #   Properties:
+  #     SubnetId: !Ref Subnet3
+  #     RouteTableId: !Ref RouteTable
 
   # # Network ACL
   # NetworkAcl:
