Add security group outputs

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1017,6 +1017,11 @@ Outputs:
   SharedEcsClusterName:
     Value: !GetAtt SharedEcsClusterStack.Outputs.EcsClusterName
 
+  SharedMysqlClientSecurityGroupId:
+    Value: !GetAtt SharedDatabaseSecurityGroupsStack.Outputs.SharedMysqlClientSecurityGroupId
+  SharedPostgresqlClientSecurityGroupId:
+    Value: !GetAtt SharedDatabaseSecurityGroupsStack.Outputs.SharedPostgresqlClientSecurityGroupId
+
   SharedAuroraMysqlEndpoint:
     Value: !Ref SharedAuroraMysqlEndpoint
   SharedAuroraMysqlPort:
