Update shared DC cluster security groups

--- a/db/shared-apps-aurora-pg/database-cluster.yml
+++ b/db/shared-apps-aurora-pg/database-cluster.yml
@@ -58,9 +58,9 @@ Parameters:
     Type: AWS::EC2::Subnet::Id
   Subnet3Id:
     Type: AWS::EC2::Subnet::Id
-  InstanceSecurityGroupId:
+  ClientSecurityGroupId:
     Description: >-
-      The ID for a security group that EC2 instances which should have access
+      The ID for a security group that clients which should have access
       to the database belong to
     Type: String
 
@@ -175,15 +175,15 @@ Resources:
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Common }
       VpcId: !Ref SharedVpcId
-  DbClusterInstanceIngressIngress:
+  DbClusterClientIngress:
     Type: AWS::EC2::SecurityGroupIngress
     Properties:
       Description: >-
-        Allows ingress traffic from the shared ALB ASG instance security group
+        Allows ingress traffic from the client security group
       FromPort: 3306
       GroupId: !GetAtt DbClusterSecurityGroup.GroupId
       IpProtocol: tcp
-      SourceSecurityGroupId: !Ref InstanceSecurityGroupId
+      SourceSecurityGroupId: !Ref ClientSecurityGroupId
       ToPort: 3306
 
 Outputs:
