Add feed CDN DNS records

--- a/dns/publicfeeds.net-hosted_zone.yml
+++ b/dns/publicfeeds.net-hosted_zone.yml
@@ -225,3 +225,11 @@ Resources:
         # It's Lit
         - { Type: A, Name: !Sub "pf5698bksp.${Domain}", AliasTarget: { DNSName: "d2tq03grnpvp5i.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf5698bksp.${Domain}", AliasTarget: { DNSName: "d2tq03grnpvp5i.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+
+        # Latino Rebels
+        - { Type: A, Name: !Sub "pf1231lrfm.${Domain}", AliasTarget: { DNSName: "d2o72wpk1k81sz.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf1231lrfm.${Domain}", AliasTarget: { DNSName: "d2o72wpk1k81sz.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+
+        # In the Thick
+        - { Type: A, Name: !Sub "pf1221ittp.${Domain}", AliasTarget: { DNSName: "d3e6i5hvdtpnc3.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf1221ittp.${Domain}", AliasTarget: { DNSName: "d3e6i5hvdtpnc3.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
