Add GoDaddy TXT record

--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -46,6 +46,7 @@ Resources:
             - '"google-site-verification=NgVnyJeUZ7gbeAr4l2BeDMfDonC-U6W2VONkOMxb4IM"'
             - '"google-site-verification=j6DW4DZxyKz5eX_UEMJ2zft2FcZquM6DLZCYzKkOeSs"'
             - '"status-page-domain-verification=6n18jv5h9b5d"'
+            - '"f4tg44j88n3rnv8r8t7ecnih09"' # GoDaddy
             # Other
             - '"MS=ms48604406"'
           TTL: "300"
