Allow SSH traffic between private and public subnets

--- a/stacks/shared-vpc/private-network-acl.yml
+++ b/stacks/shared-vpc/private-network-acl.yml
@@ -318,6 +318,34 @@ Resources:
       RuleAction: allow
       RuleNumber: 661
 
+  # INGRESS 720
+  # Allows inbound SSH traffic from IPs within the VPC to allow connecting to
+  # private instances from, e.g., an SSH bastion
+  InboundIpV4VpcSshNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      CidrBlock: !Ref VpcCidrBlock
+      Egress: false
+      NetworkAclId: !Ref PrivateNetworkAcl
+      PortRange:
+        From: 22
+        To: 22
+      Protocol: 6 # TCP
+      RuleAction: allow
+      RuleNumber: 720
+  InboundIpV6VpcSshNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      Egress: false
+      Ipv6CidrBlock: !Select [0, !Ref VpcIpv6CidrBlocks]
+      NetworkAclId: !Ref PrivateNetworkAcl
+      PortRange:
+        From: 22
+        To: 22
+      Protocol: 6 # TCP
+      RuleAction: allow
+      RuleNumber: 721
+
   ##############################################################################
   ##############################################################################
   ##############################################################################
