--- a/stacks/shared-vpc/public-network-acl.yml
+++ b/stacks/shared-vpc/public-network-acl.yml
@@ -593,33 +593,6 @@ Resources:
       RuleAction: allow
       RuleNumber: 531
 
-  # EGRESS 620
-  # Allows outbound NTP traffic to all IPs
-  OutboundIpV4VpcSshNetworkAclEntry:
-    Type: AWS::EC2::NetworkAclEntry
-    Properties:
-      CidrBlock: !Ref VpcCidrBlock
-      Egress: true
-      NetworkAclId: !Ref PublicNetworkAcl
-      PortRange:
-        From: 22
-        To: 22
-      Protocol: 6 # TCP
-      RuleAction: allow
-      RuleNumber: 620
-  OutboundIpV6VpcSshNetworkAclEntry:
-    Type: AWS::EC2::NetworkAclEntry
-    Properties:
-      Egress: true
-      Ipv6CidrBlock: !Select [0, !Ref VpcIpv6CidrBlocks]
-      NetworkAclId: !Ref PublicNetworkAcl
-      PortRange:
-        From: 22
-        To: 22
-      Protocol: 6 # TCP
-      RuleAction: allow
-      RuleNumber: 621
-
   # EGRESS 550
   # Allows outbound NTP traffic to all IPs
   OutboundIpV4NtpNetworkAclEntry:
@@ -646,6 +619,34 @@ Resources:
       Protocol: 17 # UDP
       RuleAction: allow
       RuleNumber: 551
+
+  # EGRESS 620
+  # Allows outbound SSH traffic to the VPC, mainly to allow tunneling through
+  # an SSH bastion to other instances
+  OutboundIpV4VpcSshNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      CidrBlock: !Ref VpcCidrBlock
+      Egress: true
+      NetworkAclId: !Ref PublicNetworkAcl
+      PortRange:
+        From: 22
+        To: 22
+      Protocol: 6 # TCP
+      RuleAction: allow
+      RuleNumber: 620
+  OutboundIpV6VpcSshNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      Egress: true
+      Ipv6CidrBlock: !Select [0, !Ref VpcIpv6CidrBlocks]
+      NetworkAclId: !Ref PublicNetworkAcl
+      PortRange:
+        From: 22
+        To: 22
+      Protocol: 6 # TCP
+      RuleAction: allow
+      RuleNumber: 621
 
 Outputs:
   NetworkAclName:
