--- a/db/exchange-solr/solr-instance.yml
+++ b/db/exchange-solr/solr-instance.yml
@@ -76,6 +76,7 @@ Resources:
         - !GetAtt SolrInstanceSecurityGroup.GroupId
       SubnetId: !Ref Subnet1Id
       Tags:
+        - { Key: Name, Value: !Sub "${AWS::StackName}_solr" }
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
