Don't create EBS volume

--- a/db/exchange-solr/solr-instance.yml
+++ b/db/exchange-solr/solr-instance.yml
@@ -83,22 +83,22 @@ Resources:
         - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
         - { Key: prx:dev:application, Value: Exchange }
 
-  EbsVolume:
-    Type: AWS::EC2::Volume
-    DeletionPolicy: Retain
-    UpdateReplacePolicy: Retain
-    Properties:
-      AvailabilityZone: !GetAtt Ec2Instance.AvailabilityZone
-      Size: 8
-      Tags:
-        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
-        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
-        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
-        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
-        - { Key: prx:dev:application, Value: Exchange }
-  EbsVolumeAttachent:
-    Type: AWS::EC2::VolumeAttachment
-    Properties:
-      Device: /dev/xvdb
-      InstanceId: !Ref Ec2Instance
-      VolumeId: !Ref EbsVolume
+  # EbsVolume:
+  #   Type: AWS::EC2::Volume
+  #   DeletionPolicy: Retain
+  #   UpdateReplacePolicy: Retain
+  #   Properties:
+  #     AvailabilityZone: !GetAtt Ec2Instance.AvailabilityZone
+  #     Size: 8
+  #     Tags:
+  #       - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+  #       - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+  #       - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+  #       - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+  #       - { Key: prx:dev:application, Value: Exchange }
+  # EbsVolumeAttachent:
+  #   Type: AWS::EC2::VolumeAttachment
+  #   Properties:
+  #     Device: /dev/xvdb
+  #     InstanceId: !Ref Ec2Instance
+  #     VolumeId: !Ref EbsVolume
