Improve Dovetail Router dashboard

--- a/stacks/apps/dovetail-router.yml
+++ b/stacks/apps/dovetail-router.yml
@@ -1390,6 +1390,57 @@ Resources:
                   }
                 }
               }
+            },
+            {
+              "height": 6,
+              "width": 12,
+              "y": 21,
+              "x": 0,
+              "type": "metric",
+              "properties": {
+                "metrics": [
+                  [ "AWS/ApplicationELB", "RequestCountPerTarget", "TargetGroup", "${TargetGroup.TargetGroupFullName}", "LoadBalancer", "${Alb.LoadBalancerFullName}", { "label": "Requests/Target", "stat": "Sum" } ],
+                  [ "AWS/ApplicationELB", "HealthyHostCount", "TargetGroup", "${TargetGroup.TargetGroupFullName}", "LoadBalancer", "${Alb.LoadBalancerFullName}", { "label": "Healthy hosts", "yAxis": "right", "color": "#2ca02c" } ],
+                  [ "AWS/ApplicationELB", "UnHealthyHostCount", "TargetGroup", "${TargetGroup.TargetGroupFullName}", "LoadBalancer", "${Alb.LoadBalancerFullName}", { "label": "Unhealthy hosts", "yAxis": "right", "color": "#d62728" } ]
+                ],
+                "view": "timeSeries",
+                "stacked": false,
+                "region": "${AWS::Region}",
+                "stat": "Average",
+                "period": 60,
+                "title": "Autoscaling",
+                "yAxis": {
+                  "left": {
+                    "showUnits": false,
+                    "label": ""
+                  },
+                  "right": {
+                    "showUnits": false
+                  }
+                },
+                "annotations": {
+                  "horizontal": [
+                    {
+                      "label": "TargetValue",
+                      "value": 800
+                    }
+                  ]
+                }
+              }
+            },
+            {
+              "height": 6,
+              "width": 24,
+              "y": 27,
+              "x": 0,
+              "type": "log",
+              "properties": {
+                "query": "SOURCE '${TaskLogGroup}' | fields @timestamp, msg | filter level = \"error\" | sort @timestamp desc | limit 40",
+                "region": "${AWS::Region}",
+                "stacked": false,
+                "title": "Logged Errors",
+                "view": "table"
+              }
             }
           ]
         }
