Use actual target value

--- a/stacks/apps/dovetail-router.yml
+++ b/stacks/apps/dovetail-router.yml
@@ -63,6 +63,9 @@ Parameters:
   kMetricFilterNamespace:
     Type: String
     Default: PRX/Dovetail/Router
+  kScalingPolicyTargetValue:
+    Type: Number
+    Default: 800
   #######
   EcsClusterArn: { Type: String }
   EcsClusterName: { Type: String }
@@ -867,7 +870,7 @@ Resources:
           ResourceLabel: !Sub ${Alb.LoadBalancerFullName}/${TargetGroup.TargetGroupFullName}
         ScaleInCooldown: 120
         ScaleOutCooldown: 60
-        TargetValue: 800
+        TargetValue: !Ref kScalingPolicyTargetValue
 
   # New episode publish autoscaling
   FeedScalerFunction:
@@ -1422,7 +1425,7 @@ Resources:
                   "horizontal": [
                     {
                       "label": "TargetValue",
-                      "value": 800
+                      "value": ${kScalingPolicyTargetValue}
                     }
                   ]
                 }
