Init Counts dashboard

--- a/stacks/apps/dovetail-analytics.yml
+++ b/stacks/apps/dovetail-analytics.yml
@@ -1153,7 +1153,7 @@ Resources:
           {
             "widgets": [
               {
-                "height": 6,
+                "height": 5,
                 "width": 12,
                 "y": 0,
                 "x": 0,
@@ -1178,9 +1178,9 @@ Resources:
                 }
               },
               {
-                "height": 6,
+                "height": 5,
                 "width": 12,
-                "y": 6,
+                "y": 5,
                 "x": 0,
                 "type": "metric",
                 "properties": {
@@ -1200,9 +1200,9 @@ Resources:
                 }
               },
               {
-                "height": 6,
+                "height": 5,
                 "width": 12,
-                "y": 12,
+                "y": 10,
                 "x": 0,
                 "type": "metric",
                 "properties": {
@@ -1214,7 +1214,7 @@ Resources:
                   ],
                   "period": 60,
                   "stat": "Sum",
-                  "title": "Kinesis Streams I/O",
+                  "title": "Kinesis Streams I/O (Records)",
                   "region": "${AWS::Region}",
                   "view": "timeSeries",
                   "stacked": false,
