--- a/stacks/apps/dovetail-analytics.yml
+++ b/stacks/apps/dovetail-analytics.yml
@@ -1229,4 +1229,4 @@ Resources:
           }
         - DdbStreamName: !Select [1, !Split [":stream/", !Ref DynamoDbKinesisStreamArn]]
           MetricsStreamName: !Select [1, !Split [":stream/", !Ref MetricsKinesisStreamArn]]
-      DashboardName: !Sub ${RootStackName}-${AWS::Region}-Dovetail-Analytics2
+      DashboardName: !Sub ${RootStackName}-${AWS::Region}-Dovetail-Analytics
