--- a/stacks/apps/dovetail-counts.yml
+++ b/stacks/apps/dovetail-counts.yml
@@ -441,19 +441,39 @@ Resources:
         {
           "widgets": [
             {
-              "height": 6,
-              "width": 12,
-              "y": 6,
+              "height": 5,
+              "width": 16,
+              "y": 0,
               "x": 0,
               "type": "metric",
               "properties": {
                 "metrics": [
-                  [ "AWS/Lambda", "IteratorAge", "FunctionName", "${CountsFunction}", { "label": "Counts Lambda" } ]
+                  [ "AWS/Lambda", "Invocations", "FunctionName", "${CountsFunction}", { "label": "Invocations" } ],
+                  [ "AWS/Lambda", "Errors", "FunctionName", "${CountsFunction}", { "label": "[max: ${!MAX}] Errors", "yAxis": "right" } ]
                 ],
                 "view": "timeSeries",
                 "stacked": false,
                 "region": "${AWS::Region}",
-                "title": "Max Iterator Age",
+                "title": "Function Health",
+                "period": 60,
+                "liveData": true,
+                "stat": "Sum"
+              }
+            },
+            {
+              "height": 5,
+              "width": 8,
+              "y": 0,
+              "x": 16,
+              "type": "metric",
+              "properties": {
+                "metrics": [
+                  [ "AWS/Lambda", "IteratorAge", "FunctionName", "${CountsFunction}", { "label": "[max: ${!MAX}] Age" } ]
+                ],
+                "view": "timeSeries",
+                "stacked": false,
+                "region": "${AWS::Region}",
+                "title": "Function Iterator Age",
                 "period": 60,
                 "liveData": true,
                 "stat": "Maximum"
