--- a/stacks/apps/dovetail-counts.yml
+++ b/stacks/apps/dovetail-counts.yml
@@ -449,7 +449,9 @@ Resources:
               "properties": {
                 "metrics": [
                   [ "AWS/Lambda", "Invocations", "FunctionName", "${CountsFunction}", { "label": "Invocations" } ],
-                  [ "AWS/Lambda", "Errors", "FunctionName", "${CountsFunction}", { "label": "[max: ${!MAX}] Errors", "yAxis": "right" } ]
+                  [ "AWS/Lambda", "Errors", "FunctionName", "${CountsFunction}", { "label": "[max: ${!MAX}] Invocation errors", "yAxis": "right" } ],
+                  [ "${kMetricFilterNamespace}", "warns_${CountsFunction}", { "label": "[max: ${!MAX}] Logged warns", "yAxis": "right" } ],
+                  [ "${kMetricFilterNamespace}", "errors_${CountsFunction}", { "label": "[max: ${!MAX}] Logged errors", "yAxis": "right" } ]
                 ],
                 "view": "timeSeries",
                 "stacked": false,
